fixing side bar overflow

--- a/frontend/src/Components/RankingTable/rankingtable.css
+++ b/frontend/src/Components/RankingTable/rankingtable.css
@@ -3,6 +3,8 @@
     width: 100%;
     display: grid;
     padding:20px;
+    height: 100vh;
+    overflow: scroll;
 }
 .widgets-container{
     display: flex;
